syntax = "proto3";

package chat;

option go_package = "github.com/playboi9/golang-forum/internal/chat/transport/grpc/gen";

service ChatService {
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message DeleteMessageRequest {
    int32 messageId = 1;
    bool isAdmin = 2;
    int32 userId = 3;
}
message DeleteMessageResponse {
    bool success = 1;
}